[package]
  name = "queue-file-swift"
  version = "0.1.2"
  edition = "2024"

[dependencies]
  queue-file = "1.4.10"
  thiserror = "2.0"
  uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
  uniffi = { version = "0.30.0", features = ["build"] }

[lib]
  crate-type = ["cdylib", "staticlib"]
  name = "queuefile"

[[bin]]
  name = "uniffi-bindgen"
  path = "src/uniffi-bindgen.rs"
